# archhive-app

./: .gitignore  .prettierignore  AGENTS.md  Plan.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
docs/: README.md  cookie-import.md  custom-sites.md  lan-web.md  mobile-android.md  plugins.md  release.md  sites.md  troubleshooting-android.md
scripts/: AI-SETUP-README.md  android-dev.ps1  android-regen.ps1  android-regen.sh  bump-version.ts  finish-migrate.ps1  generate-plugins.ts  migrate-models-supercopy.ps1  patch-android-lan.ps1  patch-android-lan.sh  release.ps1  setup-ai-env-continue.ps1  setup-ai-env.ps1  setup-binaries.ps1  setup-binaries.sh  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: .gitkeep  README.md
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discovery.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/desktop/: mod.rs  tray.rs
src-tauri/src/downloads/: bulk.rs  gallery_dl.rs  image.rs  manager.rs  mod.rs  naming.rs
src-tauri/src/media/: ffmpeg.rs  mod.rs
src-tauri/src/mobile/: mod.rs  standalone.rs
src-tauri/src/server/: files.rs  mod.rs  streaming.rs
src-tauri/src/sites/: browse_fallback.rs  mod.rs  registry.rs  urls.rs  yt_dlp.rs
src-tauri/src/sites/adapters/: custom.rs  generic_ytdlp.rs  mod.rs  pornhub.rs  reddit.rs  redgifs.rs  thothub.rs
src-tauri/src/vault/: mod.rs
src-tauri/tests/fixtures/: thothub_search.html
(+58 files in other folders)
